fix icon alignment

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ h4 {
   font-weight: 400;
   height: 26%;
   margin: 0;
+  margin-bottom: 25px;
   width: 34%;
 }
 
@@ -49,6 +50,7 @@ p {
   background-color: #139A43;
   display: flex;
   justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
@@ -56,6 +58,7 @@ p {
   background-color: #053B06;
   display: flex;
   justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
@@ -63,6 +66,7 @@ p {
   background-color: #0B5D1E;
   display: flex;
   justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
@@ -70,6 +74,7 @@ p {
   background-color: #053B06;
   display: flex;
   justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
@@ -82,6 +87,7 @@ p {
   background-color: #000000;
   display: flex;
   justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
@@ -89,6 +95,7 @@ p {
   background-color: #0DAB76;
   display: flex;
   justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
@@ -96,6 +103,7 @@ p {
   background-color: #000000;
   display: flex;
   justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
